--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Mickey Theme for Jekyll
+title: CLENS - MDST3703
 ---
 
 <section class="section--first section--frontpage">
@@ -12,7 +12,7 @@ title: Mickey Theme for Jekyll
       <div class="postMeta-wrapper postMeta-wrapper--frontpage">
         <ul class="postMeta">
           <li class="postMeta-tagline">
-            a minimal theme for Jekyll
+            A Political Twitter App
           </li>
         </ul>
       </div>
