--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spatial by TEMPLATED</title>
+		<title>Tweet 2016</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -25,20 +25,20 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><strong><a href="index.html">Spatial</a></strong> by Templated</h1>
+				<h1><strong><a href="index.html">Tweet 2016</a></strong> by CLENS</h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="generic.html">Candidates</a></li>
+						<li><a href="elements.html">About</a></li>
 					</ul>
 				</nav>
 			</header>
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Spatial</h2>
-				<p>Lorem ipsum dolor sit amet nullam consequat <br /> interdum vivamus donce sed libero.</p>
+				<h2>Tweet 2016</h2>
+				<p>To present information on popular political issues in a non-partisan, informative manner using data from Twitter. The goal is not to predict the presidential election or draw correlations/causations between tweets and results of the election. Twitter is just a way to see what people are talking about and use these trending topics to keep people informed and up to date on what's important for others across the nation; thus exposing people to different content/information than what they are used to.</p>
 				<ul class="actions">
 					<li><a href="#" class="button special big">Get Started</a></li>
 				</ul>
