--- a/index.html
+++ b/index.html
@@ -40,23 +40,25 @@
 				<h2>Tweet 2016</h2>
 				<p>To present information on popular political issues in a non-partisan, informative manner using data from Twitter. The goal is not to predict the presidential election or draw correlations/causations between tweets and results of the election. Twitter is just a way to see what people are talking about and use these trending topics to keep people informed and up to date on what's important for others across the nation; thus exposing people to different content/information than what they are used to.</p>
 				<ul class="actions">
-					<li><a href="#" class="button special big">Get Started</a></li>
+					<li><a href="#middle" class="button special big">Map</a></li>
 				</ul>
 			</section>
 
 			<!-- One -->
 				<section id="one" class="wrapper style1">
-					<div class="container 75%">
-						<div class="row 200%">
-							<div class="6u 12u$(medium)">
-								<header class="major">
-									<h2>Maecenas luctus lectus</h2>
-									<p>Perspiciatis doloremque recusandae dolor</p>
-								</header>
-							</div>
-							<div class="6u$ 12u$(medium)">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non ea mollitia corporis id, distinctio sunt veritatis officiis dolore reprehenderit deleniti voluptatibus harum magna, doloremque alias quisquam minus, eaque. Feugiat quod, nesciunt! Iste quos ipsam, iusto sit esse.</p>
-								<p>Dolorum aspernatur maxime libero ratione quidem distinctio, placeat fugiat laborum voluptatum enim neque soluta vel sunt id ex veritatis. Labore rerum, odit sapiente, alias mollitia magnam exercitationem modi amet earum quia atque ipsum voluptas asperiores quas laboriosam.</p>
+					<div id="middle" ><a href="middle"></a>
+						<div class="container 75%">
+							<div class="row 200%">
+								<div class="6u 12u$(medium)">
+									<header class="major">
+										<h2>Maecenas luctus lectus</h2>
+										<p>Perspiciatis doloremque recusandae dolor</p>
+									</header>
+								</div>
+								<div class="6u$ 12u$(medium)">
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non ea mollitia corporis id, distinctio sunt veritatis officiis dolore reprehenderit deleniti voluptatibus harum magna, doloremque alias quisquam minus, eaque. Feugiat quod, nesciunt! Iste quos ipsam, iusto sit esse.</p>
+									<p>Dolorum aspernatur maxime libero ratione quidem distinctio, placeat fugiat laborum voluptatum enim neque soluta vel sunt id ex veritatis. Labore rerum, odit sapiente, alias mollitia magnam exercitationem modi amet earum quia atque ipsum voluptas asperiores quas laboriosam.</p>
+								</div>
 							</div>
 						</div>
 					</div>
