--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Tweet 2016</h2>
-				<p>To present information on popular political issues in a non-partisan, informative manner using data from Twitter. The goal is not to predict the presidential election or draw correlations/causations between tweets and results of the election. Twitter is just a way to see what people are talking about and use these trending topics to keep people informed and up to date on what's important for others across the nation; thus exposing people to different content/information than what they are used to.</p>
+				<p> A website designed to visualize what Twitter users across the country are talking about in the lead up to the 2016 presidential election. </p>
 				<ul class="actions">
 					<li><a href="#middle" class="button special big">Map</a></li>
 				</ul>
