--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Tweet 2016</h2>
-				<p> A website designed to visualize what Twitter users across the country are talking about in the lead up to the 2016 presidential election. </p>
-				<ul class="actions">
+				<div class="container 75%">
+					<p> A website designed to visualize what Twitter users across the country are talking about in the lead up to the 2016 presidential election. </p> </br></br>
+				</div>
+					<ul class="actions">
 					<li><a href="#middle" class="button special big">Map</a></li>
 				</ul>
 			</section>
