--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<!-- One -->
 				<section id="one" class="wrapper style1">
 					<div class="container 75%">
-						<div id="middle" ><a href="middle"></a>
+						<div id="middle" class = "container 75%" ><a href="middle"></a>
 							<div class="row 200%">
 								<div class="6u 12u$(medium)">
 									<header class="major">
