--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 			<!-- One -->
 				<section id="one" class="wrapper style1">
-					<div class="container 75%">
+					<div class="row 200%">
 						<div id="middle" class = "container 75%" ><a href="middle"></a>
 							<div class="row 200%">
 								<div class="6u 12u$(medium)">
