--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
 			<!-- One -->
 				<section id="one" class="wrapper style1">
-					<div class="row 200%">
-						<div id="middle" class = "container 75%" ><a href="middle"></a>
-							<div class="row 200%">
+					<div class = "container 75%">
+						<div id="middle" class="row 200%"><a href="middle"></a>
+							<div>
 								<div class="6u 12u$(medium)">
 									<header class="major">
 										<h2>Maecenas luctus lectus</h2>
