--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="generic.html">Candidates</a></li>
-						<li><a href="elements.html">About</a></li>
+						<li><a href="candidates.html">About</a></li>
 					</ul>
 				</nav>
 			</header>
