--- a/candidates.html
+++ b/candidates.html
@@ -29,8 +29,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="candidates.html">Candidates</a></li>
+						<li><a href="about.html">About</a></li>
 					</ul>
 				</nav>
 			</header>
