--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<section id="banner">
 				<h2>Tweet 2016</h2>
 				<div class="container 75%">
-					<p> A website designed to visualize what Twitter users across the country are talking about in the lead up to the 2016 presidential election. </p> </br></br>
+					<p> A website devoted telling you 116 reasons why "116 things to do before you graduate is the stupidest project in the whole world." </p> </br></br>
 				</div>
 					<ul class="actions">
 					<li><a href="#middle" class="button special big">Map</a></li>
