Index: Matra, Data: More Tweets

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Tweet 2016</h2>
+				<h2>Trump the Data</h2>
 				<div class="container 75%">
-					<p> DONALD TRUMP!! </p> </br></br>
+					<p> Tracking tweets about Donald Trump in the lead up to the 2016 presidential election to discover who supports him and why. </p> </br></br>
 				</div>
 					<ul class="actions">
 					<li><a href="#middle" class="button special big">Map</a></li>
