--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="candidates.html">Candidates</a></li>
+						<li><a href="trump.html">Trump</a></li>
 						<li><a href="about.html">About</a></li>
 					</ul>
 				</nav>
