--- a/index.html
+++ b/index.html
@@ -10,17 +10,29 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<meta name="viewport" content="width=device-width">
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="js/code.js"></script>
+		<script src="js/US-responsive.js"></script>
+
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
+			<link rel="stylesheet" type="text/css" href="css/map.css"/>
 		</noscript>
+
+		<!--- MAP SCRIPTS AND TAGS-->
+  		
+
 	</head>
+
 	<body class="landing">
 
 		<!-- Header -->
@@ -29,7 +41,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="candidates.html">Candidates</a></li>
+						<li><a href="trump.html">Trump</a></li>
 						<li><a href="about.html">About</a></li>
 					</ul>
 				</nav>
@@ -48,6 +60,9 @@
 
 			<!-- One -->
 				<section id="one" class="wrapper style1">
+					<!--MAP-->
+
+
 					<div class = "container 75%">
 						<div class="row 200%">
 							<div class="6u 12u$(medium)">
@@ -168,9 +183,9 @@
 						<li><a href="#" class="icon fa-instagram"></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; CLENS MDST 3703</li>
+						<li>Code/Repo: <a href="http://github.com/ba5bx">ba5bx</a></li>
+						<li>Personal Site: <a href="http://twitter.com/brianaguirre">Carlos</a></li>
 					</ul>
 				</div>
 			</footer>
