Map, Data Tabes, and Trump Page

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><strong><a href="index.html">Spatial</a></strong> by Templated</h1>
+				<h1><strong><a href="index.html">TWEET2016</a></strong> by clens </h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -40,15 +40,15 @@
 				<div class="container">
 
 					<header class="major special">
-						<h2>Generic</h2>
-						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+						<h2>BLENS</h2>
+						<p>We are just a few cool kids currently training to be super heroes.</p>
 					</header>
 
-					<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-					<p>Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan.</p>
-					<p>Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan commodo odio cubilia ac eu interdum placerat placerat arcu commodo lobortis adipiscing semper ornare pellentesque.</p>
-					<p>Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet blandit adipiscing arcu ante.</p>
 
+					<p>Donald John Trump was born on June 14, 1946 in Queens, New York. Trump is known for his real estate development, the television show The Apprentice, his book published in 2000 titled The America We Deserve, and currently is a candidate for the 2016 presidential election. His father, Fred Trump, was a real estate developer as well. He worked for his dad’s company, Elizabeth Trump & Son, while he attended business school at Wharton. Trump was handed down the business in 1971, changing the name to The Trump Organization. </p>
+					<p>He has made a name for himself in New York City as his real estate development projects began there. One of his first major projects was turning the Commodore Hotel into the Grand Hyatt in 1980. The Trump World Tower, which is 72-stories high and across from the United Nations Headquarters, was completed in 2001. The Trump brand is well-established in many industries and products. Trump products include Trump Restaurants, Trump Golf, Trump Productions, and other merchandise. He became the executive producer and host of NBC’s The Apprentice in 2003. He made over $210 million hosting the show for 14 seasons. </p>
+					<p>Trump has helped Democratic candidates in the past, such as donating money towards Hillary Clinton, Joe Biden, and John Kerry. However more recently shows support for many Republican candidates. For example, Trump endorsed Mitt Romney and was an early support of Ronald Reagan. despite, his contribution to both Republican and Democratic campaigns. Trump has denounced President Obama’s citizenship, qualifications to get into Harvard Law, and policies. </p>
+					<p>Trump’s political opinions have fluctuated throughout the years, supporting and rejecting certain political issues in recent years. For example, in 2009, he was a proponent for the government rescue plan for the U.S. auto industry bailout, which was generally a liberal opinion. Trump also believes that vaccines can cause autism, which is often associated with some conservative beliefs. Also, he does not believe in climate-change and has been criticized for being against what the science community supports. He has had a variety of political beliefs ranging from conservative to liberal leanings, even switching his opinion on certain issues. Now during his run for President, he is much more Republican than he has been in the past.  </p>
 				</div>
 			</section>
 
