Interesting Facts from our Data

--- a/index.html
+++ b/index.html
@@ -718,43 +718,43 @@
 						</header>
 						<div class="feature-grid">
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic04.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/18-25.png" alt="" /></div>
 								<div class="content">
 									<header>
-										<h4>Lorem ipsum</h4>
-										<p>Lorem ipsum dolor sit</p>
+										<h4>Age of people who tweeted about Trump the most.</h4>
+										<p>Nearly 43% of the tweets came from this age group.</p>
 									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore esse tenetur accusantium porro omnis, unde mollitia totam sit nesciunt consectetur.</p>
+									<p>Some of the tweets were positive, but most of them were negative. Roughly 73% of the tweets from people this age criticized Trump.</p>
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic05.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/hilary.png" alt="" /></div>
 								<div class="content">
 									<header>
-										<h4>Recusandae nemo</h4>
-										<p>Ratione maiores a, commodi</p>
+										<h4>Hillary vs Trump</h4>
+										<p>Clinton was the democrat most mentioned when people tweeted about Trump.</p>
 									</header>
-									<p>Animi mollitia optio culpa expedita. Dolorem alias minima culpa repellat. Dolores, fuga maiores ut obcaecati blanditiis, at aperiam doloremque.</p>
+									<p>Perhaps it's because people find Hillary fascinating, or becaue Trump has been quoted critizing her, but people mentioned her the most in the tweets we collected.</p>
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic06.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/bush.png" alt="" /></div>
 								<div class="content">
 									<header>
-										<h4>Laudantium fugit</h4>
-										<p>Possimus ex reprehenderit eaque</p>
+										<h4>Jeb Bush Better than Trump?</h4>
+										<p>Bush was the Republican most talked about and compared to Trump.</p>
 									</header>
-									<p>Maiores iusto inventore fugit architecto est iste expedita commodi sed, quasi feugiat nam neque mollitia vitae omnis, ea natus facere.</p>
+									<p>When people tweeted about Trump, they often talked about how he was not as good of a Republican as Bush. Nearly 40% of the tweets that mentioned Bush referenced Bush superiority, and the rest compared their views on topics like taxes and immigration.</p>
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic07.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/52.png" alt="" /></div>
 								<div class="content">
 									<header>
-										<h4>Porro aliquam</h4>
-										<p>Quaerat, excepturi eveniet laboriosam</p>
+										<h4>Immigration and Women's Rights</h4>
+										<p>Tweets that contained political topics were mostly about these two.</p>
 									</header>
-									<p>Vitae earum unde, autem labore voluptas ex, iste dolorum inventore natus consequatur iure similique obcaecati aut corporis hic in! Porro sed.</p>
+									<p>Donald Trump gets the most amount of press time and is often featured in several news medias for his radical views on several political topics. Of all the tweets that contained a political topic, most contained the words immigration and women's rights (or things pertaining to them).  </p>
 								</div>
 							</div>
 						</div>
