--- a/about.html
+++ b/about.html
@@ -54,13 +54,13 @@
 				<div class="container">
 					<ul class="icons">
 						<li><a href="#" class="icon fa-facebook"></a></li>
-						<li><a href="#" class="icon fa-twitter"></a></li>
-						<li><a href="#" class="icon fa-instagram"></a></li>
+						<li><a href="http://twitter.com/brianaguirre" class="icon fa-twitter"></a></li>
+						<li><a href="http://instagram.com/briannaguirre" class="icon fa-instagram"></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; CLENS MDST 3703</li>
+						<li>Code/Repo: <a href="http://github.com/ba5bx">ba5bx</a></li>
+						<li>Personal Site: <a href="http://twitter.com/brianaguirre">Carlos</a></li>
 					</ul>
 				</div>
 			</footer>
