--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 								</div>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<p>What we are interested to see are the topics people tweet about when they refer to Donald Trump. So we track down national tweets and classify them into their categories based on political topics like immigration, abortion, etc. Doing so, we are able to better understand what people take into account when they make their decisions about trump </p>
-								<p>Below is a map that demonstrates more than 40,000 tweets about Donald Trump and what the top topic was for each state.</p>
+								<p>We are interested in tracking the specific topics people tweet about when they reference Donald Trump. So, we collected tweets from across the country and classified them into political categories like Immigration, Abortion, Economy, and more. In doing so, we were better able to understand which discourses Trump inspires across the U.S. as voters attempt to understand 2016’s most polarizing presidential candidate.</p>
+								<p>Below is an interactive map of that consolidates more than 40,000 tweets about Donald Trump from across the U.S., as well as the most tweeted about topic for each state.</p>
 							</div>
 						</div>
 
@@ -779,8 +779,8 @@
 				<div class="container">
 					<ul class="icons">
 						<li><a href="#" class="icon fa-facebook"></a></li>
-						<li><a href="#" class="icon fa-twitter"></a></li>
-						<li><a href="#" class="icon fa-instagram"></a></li>
+						<li><a href="http://twitter.com/brianaguirre" class="icon fa-twitter"></a></li>
+						<li><a href="http://instagram.com/briannaguirre" class="icon fa-instagram"></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; CLENS MDST 3703</li>
