--- a/trump.html
+++ b/trump.html
@@ -56,6 +56,178 @@
 				</div>
 			</section>
 
+
+			<!-- REGIONAL INFORMATION-->
+			<section id="main" class="wrapper">
+				<div class="container">
+				<div class = "container 75%">
+				<div class="row 200%">
+					<h1>WHY IS DONALD TRUMP SO POPULAR?</h1>
+					<header class="major special">
+						<h2>Donald Trump</h2>
+						<p>In order to better understand what his stance is on several political topics, here is a brief summary of his life.</p>
+					</header>
+					<a href="#" class="image fit"><img src="images/Midwed.jpg" alt="" /></a>
+					<!-- Text -->
+						<section>
+							<h2>MIDWEST POPULAR OPINIONS</h2>
+
+							<p>The Midwest consists of the following states: North Dakota, South Dakota, Nebraska, Kansas, Minnesota, Iowa, Missouri, Wisconsin, Illinois, Indiana, Michigan, and Ohio. A majority of the states show they are mostly not in favor of gun control, pro-choice, and against immigration. This information is a general synopsis of the positions of the midwest, gathered from isidewith.com, ontheissues.org, Donald Trump’s personal campaign webpage, and people-press.org.</p>
+
+							<p>On the issue of gun control, throughout the 1990s and early 2000s less people have been in favor in the Midwest, meaning there has been an increase in support for gun rights. However, Illinois is an exception with about 50% in favor of gun rights and 50% in favor of gun control according to isidewith.com. The site also shows people in Minnesota are divided on the issue as well, however most are not in favor of gun control.</p> 
+
+							<p>Donald Trump believes it is important to defend the rights of law-abiding gun owners. In 2000, Trump said that both Democrats and Republicans are wrong about guns. This means he thought some restrictions were fine, although generally supported gun rights. He doesn’t approve many restrictions, currently believes we need to fix how we do background checks.</p> 
+
+							<p>On the issue of abortion, the majority of the states are divided. In some states the percentages in-favor and not in-favor of abortions are close. For example, South Dakota is 50% pro-choice and 50% are pro-life. Overtime the Midwest has grown more opposed to abortion according to isidewith.com. In the mid-1990s, people-press.org found that 55% of people in the Midwest view abortion as a legal practice in most cases and 42% saw it as illegal practice in most cases. According to people-press.org which polled data from 2012-2013, 47% of the Midwest believes abortion should be illegal in most cases and 47% believes abortion should legal in most cases.</p> 
+
+							<p>Donald Trump is pro-life, however claims he has evolved throughout his lifetime. Specifically, Trump believes there should be bans on late abortions and exceptions for rape, incest, or health according to ontheissues.org. In 2011, Trump claimed he wanted to fight Obamacare abortion funding.</p>
+
+							<p>A majority of the Midwest are proponents for kids of illegal immigrants being granted citizenship. This shows voters would most likely disagree with Donald Trump who is a major supporter of border control. He is looking to build a wall to prevent illegal immigrants from Mexico to get into the United States. In September 2015, Trump stated the United States is the only country “dumb enough for birthright citizenship” according to ontheissues.org. His views directly oppose the majority of the Midwest who are adamant about citizenship for kids of illegal immigrants.</p>
+
+						</section>					
+				</div>
+				</div>
+				</div>
+			</section>
+
+			<section id="main" class="wrapper">
+				<div class="container">
+				<div class = "container 75%">
+				<div class="row 200%">
+					<header class="major special">
+						<h2>Donald Trump</h2>
+						<p>In order to better understand what his stance is on several political topics, here is a brief summary of his life.</p>
+					</header>
+					<a href="#" class="image fit"><img src="images/South.jpg" alt="" /></a>
+
+					<!-- Text -->
+						<section>
+							<h2>SOUTH POPULAR OPINIONS</h2>
+
+							<p>The South’s general opinion on abortion is a strong pro-life sentiment. The South has the highest opposition to legal abortions. The South is the only region in which the opposition of legal abortion has been increasing in recent years. The South Central region has the largest percentage people believing that abortion should be illegal in all cases with 52% according to PEW research center. The South Atlantic is 3rd with 42 believing it is illegal%, but 50% still believe it is legal. in 1995-1996, research showed that 45% of the South Central states believe abortion was illegal. This is 6 percent less than the 2013 data. The South is becoming increasingly opposed to abortion.</p>
+
+							<p>This trend is interesting to consider when compared to Donald Trump’s opinion on abortion. In the late 1990’s, he was a pro-choice supporter, but in recent years he has become increasingly pro-life. He credits a personal story, a couple he knew who decided not to have an abortion and were grateful they didn't, as to why he has switched his beliefs.  His alignment with the general conservative and republican opinions on abortion makes sense in an election. By becoming a stronger pro-life supporter, he is becoming a favorable candidate to those in Southern states with similar views.</p> 
+
+							<p>The South’s general opinion on gun control is steadily decreasing. The support for gun rights has been generally increasing since the mid 1990’s.  Currently, the percentage of those in support of gun rights and against gun control is 51%, as compared to the 39% in 1995.</p> 
+
+							<p>Donald Trump’s opinions on gun control have also shifted throughout the years. In the late 1990’s and early 2000’s Donald Trump was generally against gun control, but understood and supported some limitations on guns, such as assault weapons. Now he seems to be much more in favor of gun rights, and does not support many gun control limitations. He believes the current format of background checks does not work. He asserts that he is an avid supporter of the second amendment. Donald Trump’s increasing support of gun rights makes him appealing to the Southern States who are also increasingly supporting gun rights.</p> 
+
+							<p>The South’s general opinion on immigration is generally that of the republican party. The occurrence of the “Southern Democrat” has been decreasing since the 1960’s, and is nearly extinct now, only holding influence sometimes in states like Virginia and Florida. The states of the South however are hard to classify as completely republican, because governors and senators sometimes are Democrats. The majority of the Southern States, however, voted against Obama in 2008, thus leaning Republican. According to Pew Research Center, most republicans are in favor of decreasing immigration, with 67%. 25% think that immigration should be kept at present level, and only 7% believe it should be increased. 89% of Republicans also believe that the entire system of immigration needs major changes, or needs a complete overhaul.</p> 
+
+							<p>Donald Trump has been a strong voice on the front of immigration, in supreme support of limiting immigration. He is strongly opposed to “new people coming in”. He wants to heavily control borders, especially the Mexican American border, and believes legal immigration should be challenging. His suggestion for border control included a triple layered fence and predator drones on the border. He is also against the idea of “anchor babies” and does not support the idea that children of other countries born on American soil should be given U.S citizenship.  The South is likely to support Donald Trump on his opinions of immigration, as they have similar beliefs on the issue. The strong support of immigration control is likely to make southern twitter users to support Donald Trump.</p>
+
+						</section>
+				</div>
+				</div>				
+				</div>
+			</section>
+			<section id="main" class="wrapper">
+				<div class="container">
+					<div class = "container 75%">
+					<div class="row 200%">
+					<header class="major special">
+					</header>
+					<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+
+					<!-- Text -->
+						<section>
+							<h2>NORTHEASTERN POPULAR OPINION</h2>
+
+							<p>The Northeastern United States is composed of nine states: Connecticut, Maine, Massachusetts, New Hampshire, New Jersey, New York, Pennsylvania, Rhode Island, and Vermont. Since 1992, the Northeast has consistently voted Democrat in the General Election.1 Today, 46.41% identify or lean Democrat, compared to the national average of 39.6% that identify as or lean Democrat. Conversely, only 34.54% of Northeasterners identify as or lean Republican, compared to the national average of 42.7%.2</p>
+ 
+							<p>On abortion, the Northeast strongly identifies as pro-choice. According to isidewith.com, 72.33% of those polled from these states are pro-choice.3 Specifically, New England residents (those from CT, MA, ME, NH, RI, and VT) are the strongest supporters of legalized abortion in the country, with 75% saying abortion should be legal in all or most cases.4 Trump’s position on abortion has wavered over the years, although today he characterizes himself as pro-life.5 His desire to defund Planned Parenthood will most likely be met with resistance among Northeastern voters, creating a large obstacle in his path to court voters in these states.</p>
+							 
+							<p>On immigration, 61.43% of Northeasterners believe that children of illegal immigrants should be granted citizenship.6 This is in stark contrast to Donald Trump’s immigration policy proposal released in August, which not only set a goal of deporting the 11 million illegal immigrants in the U.S., but also end the U.S.’s birthright citizenship policy, which guarantees citizenship to anyone born in the United States under the 14th amendment.7 Like abortion, the Northeast’s liberal attitude on immigration reform and, specifically, the birthright of children born to illegal immigrant, will make it difficult for Trump to court voters in these states. Many, including the Washington Post, have even called his rhetoric on illegal immigrants “bigoted” and “racist.”8</p>
+							 
+							<p>On gun control, the Northeast is somewhat more neutral, with 53.67% of those polled by isidewith.com stating a belief in increased gun control.9 Pew’s polls of the Northeast reveals that 37% of Northeasterners support gun rights, while 59% are for gun control.10</p>
+
+							<p>Donald Trump unequivocally supports the Second Amendment, but his desire to fix the current background check system by making sure accurate criminal and mental health records are kept may appeal to the more liberal Northeast. His desire to “fix our broken mental health system” will also appeal to this region, likely making his gun stance less of a hindrance in gaining Northeastern support than his strong conservative views on immigration and abortion.</p>
+						</section>
+				</div>
+				</div>				
+				</div>
+			</section>
+
+
+			<section id="main" class="wrapper">
+				<div class="container">
+					<div class = "container 75%">
+					<div class="row 200%">
+					<header class="major special">
+					</header>
+					<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+
+					<!-- Text -->
+						<section>
+							<h2>WESTERN POPULAR OPINION</h2>
+
+							<p>For the purposes of this site, we define the West of the United States as Arizona, California, Colorado, Idaho, Montana, Nevada, New Mexico, Oregon, Utah, Washington, and Wyoming. The area as whole is extremely politically diverse with the coastal states of California, Oregon, and Washington expressing views that align with the democratic party in Presidential elections and the others aligning with the republicans. However, when we break it down issue by issue interesting patterns start to emerge.</p> 
+
+							<p>With the issue of gun control, most Western states do not support increased regulation. In fact, with the exception of California, Oregon and Washington, Western states take a dramatic position on the issue. While the nations opinions seem to split down the middle, leaning slightly to the side of not increasing regulation, the West paints a vastly different picture. The states of Idaho, Montana, and Wyoming boast a 70% disapproval rate, starkly different from the national average. Even the approving states unusually aren’t that far from the national average, suggesting that on the issue of gun control the West may favor deregulation more than the rest of the country.</p>
+
+							<p>On the issue of immigration, the area is split almost down the middle. In answer to the question “Do you support stronger measures to increase our border security”, 69% of the country said yes. In contrast to the issue of gun control, the area stayed within the area of the national average, with the exception of Oregon who disapproved of increasing security more strongly than the average. An interesting trend to note is that with the exception of Arizona, all Western states that lay along the Mexican border do not support stronger security measures.</p> 
+
+							<p>The issue of abortion is one of the most morally divisive political topics. Nationally, 63% of those polled were pro choice and 37% were pro life. The West, which is the center of the Mormon religion tends to be more pro life than the rest of the country. While most states are considered pro choice, they are less enthusiastic than the rest of the nation. The states that do stand out are Utah and Wyoming, whose population polled as majority pro life. However, based off the fact that 70% of the Utah population considers themselves part of the Mormon faith, this comes as little surprise.</p> 
+
+					</section>	
+				</div>
+				</div>			
+				</div>
+			</section>
+
+			<section id="one" class="wrapper style1">
+
+					<!--MAP-->
+					<div class = "container 75%">
+						<div class="row 200%">
+							<div class="6u 12u$(medium)">
+									<div id="middle" ><a href="middle"></a>
+									<header class="major">
+										<h2>WEST STATES POLLS</h2>
+										<p>How do Western states feel about the two hot topics within our research?</p>
+									</header>
+								</div>
+							</div>
+							<div class="6u$ 12u$(medium)">
+								<h3>Immigration</h3>
+									<p>Do you support stronger measures to increase our border security?
+									YES 69 NO 31
+
+									Arizona YES 73 NO 27
+									California YES 63 NO 37
+									Colorado YES 66 NO 34
+									Idaho YES 71 NO 29
+									Montana YES 70 NO 30
+									Nevada  YES 73 NO 27
+									New Mexico YES 68 NO 32 
+									Oregon YES 58 NO 42
+									Utah YES 65 NO 35
+									Washington YES 61 NO 39
+									Wyoming YES 74 NO 36</p>
+
+									<h3>Abortion</h3>
+									<p>What’s your stance on abortion?
+									YES 63 NO 37
+
+									Arizona YES 61 NO 39
+									California YES 71 NO 29
+									Colorado YES 53 NO 47
+									Idaho YES 53 NO 47
+									Montana YES 60 NO 40
+									Nevada  YES 66 NO 34
+									New Mexico YES 62 NO 38 
+									Oregon YES 69 NO 31
+									Utah YES 44 NO 56
+									Washington YES 69 NO 31
+									Wyoming YES 43 NO 57</p>
+
+
+							</div>
+						</div>
+					</div>
+				</section>
+
+
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
