Map Filters, Colors

--- a/index.html
+++ b/index.html
@@ -83,14 +83,15 @@
 							<div class="6u 12u$(xsmall)">
 								<div class="image fit captioned">
 									<img src="images/Gender.png" alt="" />
-									<h3>72% of the people who like Trump are men.</h3>
-									<p> Data shows that men tend to support Donald Trump more than women on a national level. This could be due to many reasons. For one, Donald Trump does not support has been quoted disresoecting women in several occasions. Politica</p>
+									<h3>72% of positive tweets are from men.</h3>
+									<p> Data shows that men tend to support Donald Trump more than women on a national level. This could be due to many reasons. For one, Donald Trump does not support has been quoted disresoecting women in several occasions. Men also agree with a lot of his opinions on immigration, and taxes; which are the two most tweeted topics within the gathered tweets. </p>
 								</div>
 							</div>
 							<div class="6u$ 12u$(xsmall)">
 								<div class="image fit captioned">
 									<img src="images/polarity.png" alt="" />
-									<h3>64% of the tweets were negative.</h3>
+									<h3>65% of all the tweets were negative.</h3>
+									<p> This could be due to the fact that a lot of the tweets came from younger people, who tend to be more liberal. Another reason is because a lot of tweets came from women, they tweet negatively about him due to women's rights. Last, because Donald Trump is a very polar person, those who dislike him tweet more often than those who like him.</p> 
 								</div>
 							</div>
 						</div>
@@ -768,13 +769,30 @@
 							</div>
 							<div class="6u$ 12u$(xsmall)">
 								<div class="image fit captioned">
-									<button id="load_positive">LOAD POSITIVE DATA</button>
-									<p>64% of the tweets were negative.</p>
+									<br>
+									<br>
+									<br>
+									<br>
+									<br>		
+									<br>
+									<button id="positive_tweets">Positive Tweets</button>
+									<br>
+
+									<button id="negative_tweets">Negative Tweets</button>
+									<br>
+
+									<button id="women">Women's Tweets</button>
+									<br>
+
+									<button id="men">Men's Tweets</button>
+									<br>
+
+									<button id="18-30">18-30 Year Olds</button>	
 								</div>
 							</div>
 						</div>
 						<ul class="actions">
-							<li><a href="trump.html" class="button special big">Read More about Trump</a></li>
+							<li><a href="trump.html" class="button special big">WHAT DOES ALL THIS DATA MEAN?</a></li>
 							<!--  OTHER BUTTON: <li><a href="#" class="button big">Continu</a></li> -->
 						</ul>
 					</div>
