--- a/trump.html
+++ b/trump.html
@@ -39,9 +39,9 @@
 			<section id="main" class="wrapper">
 				<div class="container">
 					<header class="major special">
-						<h2>Donald Trump</h2>
-						<p>In order to better understand what his stance is on several political topics, here is a brief summary of his life.</p>
+						<h2>Why do people like Donald Trump/why not?</h2>
 					</header>
+					<p>To answer that question, we approached it from two sides. We wanted to better understand what his stances on several political topics are and also research what states like to talk about. Seeing where these two meets helps us see how the tweets reflect all of these opinions. First, here is a brief summary of his life and some of his personal opinions on popular political topics. Below that, is our break down of regions and how the tweets reflect what previous data and poll information coincide with Donald Trump's stance on issues.</p>
 					<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 
 					<!-- Text -->
@@ -63,10 +63,7 @@
 				<div class = "container 75%">
 				<div class="row 200%">
 					<h1>WHY IS DONALD TRUMP SO POPULAR?</h1>
-					<header class="major special">
-						<h2>Donald Trump</h2>
-						<p>In order to better understand what his stance is on several political topics, here is a brief summary of his life.</p>
-					</header>
+					<p> Based on the data that we gathered, here are some things we were able to note on some of the tweet patterns. We researched how states felt towards the most tweeted topics based on political regions, and from that, we can make connections as to why people would like Donald Trump.</p>
 					<a href="#" class="image fit"><img src="images/Midwed.jpg" alt="" /></a>
 					<!-- Text -->
 						<section>
