--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
 		<script src="js/US-responsive.js"></script>
 		<!-- GET DIFFERENT DATA-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script>
-		$(document).ready(function(){
-		    $("button").click(function(){
-		        $("#div1").load("demo_test.txt");
-		    });
-		});
-		</script>
 
 
 
@@ -48,7 +41,7 @@
 
 
 		<!-- Header -->
-			<header id="header" class="alt">
+			<header id="header" class="skels-layers-fixed">
 				<h1><strong><a href="index.html">Tweet 2016</a></strong> by CLENS</h1>
 				<nav id="nav">
 					<ul>
@@ -62,12 +55,11 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Trump the Data</h2>
+				<br>
+				<<object width="625" height="344"><param name="movie" value="http://swf.tubechop.com/tubechop.swf?vurl=f0UB06v7yLY&start=0&end=33.63&cid=7468507"></param><embed src="http://swf.tubechop.com/tubechop.swf?vurl=f0UB06v7yLY&start=0&end=33.63&cid=7468507" type="application/x-shockwave-flash" allowfullscreen="true" width="625" height="344"></embed></object>
 				<div class="container 75%">
-					<p> Tracking tweets about Donald Trump in the lead up to the 2016 presidential election to discover who supports him and why. </p> </br></br>
+					<p> Tracking tweets about Donald Trump in the lead up to the 2016 presidential election to discover the conversations he is inspiring across the nation. </p>
 				</div>
-					<ul class="actions">
-					<li><a href="#middle" class="button special big">Map</a></li>
-				</ul>
 			</section>
 
 
@@ -77,7 +69,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>National Data</h2>
-							<p>The map above let's us see what each state is thinking about, but here is a more national look into what the data is telling us. </p>
+							<p>We collected tweets about Donald Trump and determined whether the message of those tweets implied positive or negative feelings on the part of the Twitter user. Here's a national view of what that data is telling us. </p>
 						</header>
 						<div class="row 150%">
 							<div class="6u 12u$(xsmall)">
@@ -114,10 +106,10 @@
 								<div class="image rounded"><img src="images/18-25.png" alt="" /></div>
 								<div class="content">
 									<header>
-										<h4>Age of people who tweeted about Trump the most.</h4>
+										<h4>Age of People Who Tweeted About Trump the Most</h4>
 										<p>Nearly 43% of the tweets came from this age group.</p>
 									</header>
-									<p>Some of the tweets were positive, but most of them were negative. Roughly 73% of the tweets from people this age criticized Trump.</p>
+									<p>Some of the tweets were positive, but most were negative. Roughly 73% of the tweets from people this age criticized Trump.</p>
 								</div>
 							</div>
 							<div class="feature">
@@ -127,7 +119,7 @@
 										<h4>Hillary vs Trump</h4>
 										<p>Clinton was the democrat most mentioned when people tweeted about Trump.</p>
 									</header>
-									<p>Perhaps it's because people find Hillary fascinating, or becaue Trump has been quoted critizing her, but people mentioned her the most in the tweets we collected.</p>
+									<p>Maybe it's because she's viewed as the Democratic frontrunner, or maybe it's because Trump has directly criticized her on numerous occasions. Either way, Clinton is the candidate mentioned most in the tweets we collected about Trump.</p>
 								</div>
 							</div>
 							<div class="feature">
@@ -147,7 +139,7 @@
 										<h4>Immigration and Women's Rights</h4>
 										<p>Tweets that contained political topics were mostly about these two.</p>
 									</header>
-									<p>Donald Trump gets the most amount of press time and is often featured in several news medias for his radical views on several political topics. Of all the tweets that contained a political topic, most contained the words immigration and women's rights (or things pertaining to them).  </p>
+									<p>Of all the tweets that contained a political topic, most centered on immigration and women's rights. It may not be a coincidence that some of Trump's most radical statements have regarded these topics.</p>
 								</div>
 							</div>
 						</div>
@@ -162,7 +154,7 @@
 					<div class = "container 75%">
 						<div class="row 200%">
 							<div class="6u 12u$(medium)">
-									<div id="middle" ><a href="middle"></a>
+									<div id="middle" >
 									<header class="major">
 										<h2>National Tweets</h2>
 										<p>What topics are Americans tweeting about in regards to Donald Trump?</p>
@@ -185,12 +177,13 @@
 					<div class="container">
 						<header class="major">
 							<h2>National Data</h2>
-							<p>The map above let's us see what each state is thinking about, but here is a more national look into what the data is telling us. </p>
+							<p>The map below lets us see what each state is tweeting about. Here's a national look at what the data is telling us.</p>
 						</header>
 						<div class="row 75%">
 							<div class="6u 12u$(xsmall)">
 								
 								<div class="image fit captioned">
+								<a href="" class="image fit"><img src="images/scale.png" alt="" class ="resize"/></a>
 								<p>KEY: The map automatically shades each state with respected to the other states to demonstrate polarity withinthe data. It ranges from light gray to dark red. The Darker it is, the higher the number of tweets in regards about the topic.</p>
 								<!-- LEFT COLUMN CONTENT:	<img src="images/Gender.png" alt="" />
 									<h3>72% of the people who like Trump are men.</h3>
