--- a/trump.html
+++ b/trump.html
@@ -85,7 +85,7 @@
 							</div>
 							<div class="6u$ 12u$(xsmall)">
 								<div class="image fit captioned">
-									<a href="south.html" class="image fit"><img src="images/south.jpg" alt="" /></a>
+									<a href="south.html" class="image fit"><img src="images/northeast.jpg" alt="" /></a>
 									<h3>South: Pro-Choice, But Still Leans Right Overall</h3>
 									<p> Surprisingly, 54% of voters in the South identify as pro-choice- a majority, but still the lowest pro-choice percentage of the four regions. The South is strongly in support of gun rights, as 62% of voters said 'no' to increased gun control. A slim minority supports temporary amnesty for undocumented workers at 46% of voters.</p> 
 								</div>
