--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="generic.html">Parents</a></li>
+						<li><a href="elements.html">Coaches</a></li>
 					</ul>
 				</nav>
 			</header>
