Final Edit - Content

--- a/generic.html
+++ b/generic.html
@@ -60,8 +60,6 @@
 						<h3>The developmental Origins of Fear of Failure in Adolescent Athletes</h3>
 			
 					</header>
-
-					<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 					
 					<p>Parental feedback can greatly impact an athlete’s performance in many different ways. Ranging from significantly boosting their child’s abilities to prominently lowering their self-esteem, parents continue to play an enormous role. Researchers, Sagar and Lavallee, conducted a study to look into the phenomenon to see how big of an effect parents actually had. “The aim of this was to examine the effect of parental feedback on young competitive athletes’ Perceived Motivational Climate (PMC), goal involvement, goal orientation, and motor performance” (Sagar and Lavallee, 2010).</p>
 					
@@ -115,6 +113,19 @@
 
 				</div>
 			</section>
+
+
+			<section id="four" class="wrapper style3 special">
+					<div class="container">
+						<header class="major">
+							<h2>Conclusion</h2>
+							<p>Continue reading about what to do and what to avoid in order to help your teenage athlete grow as a person and as he or she continues to practice a sport.</p>
+						</header>
+						<ul class="actions">
+							<li><a href="elements.html" class="button special big">Conclusion</a></li>
+						</ul>
+					</div>
+				</section>
 
 		<!-- Footer -->
 			<footer id="footer">
