--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spatial by TEMPLATED</title>
+		<title>EDLF3440 Group 2</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -25,7 +25,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><strong><a href="index.html">Spatial</a></strong> by Templated</h1>
+				<h1><strong><a href="index.html">EDLF3440 Project</a></strong> by Group 2</h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Introduction</a></li>
@@ -38,8 +38,8 @@
 		<!-- Banner -->
 
 			<section id="banner">
-				<h2>Spatial</h2>
-				<p>Lorem ipsum dolor sit amet nullam consequat <br /> interdum vivamus donce sed libero.</p>
+				<h2>Parental Influence on High School Athletes’ Sport Performance</h2>
+				<p>Brian Aguirre, Muna Yusuf, Julie Roth, Nadine de Koning<br /> University of Virginia</p>
 				<ul class="actions">
 					<li><a href="#" class="button special big">Get Started</a></li>
 				</ul>
@@ -51,11 +51,10 @@
 
 						<header class="major special">
 							<h2>Introduction</h2>
-							<p>Begin thinking about how to help your child develop as an athlete.</p>
+							<p>How to be there for your teenage athlete.</p>
 						</header>
 
-						<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-						<p>Introduction</p>
+						<!--<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a> -->
 
 					 	<p>When you are a developing youth athlete, there are a lot of factors that can influence your improvement and overall performance in a sport. There are the intrinsic motivations to play a sport, the social aspects, the team dynamic, the coaching style, and so much more that go into overall performance and development of skills. While there are countless programs and resources with information on how to refine skills through drills, how to improve your focus and motivation, on how coaches should effectively teach athletes, among others, there is a lack of resources for a major outside influence on an athlete; the parents’ behavior. </p>
 
@@ -94,15 +93,12 @@
 						<div class="container">
 
 							<header class="major special">
-								<h2>Generic</h2>
-								<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+								<h2>Youth Hockey’s Perceptions of Parental Involvement</h2>
+								<p>Ede, Kampoff, et al.</p>
 							</header>
 
-							<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-							<p>Youth Hockey’s Perceptions of Parental Involvement
-							<p>Ede, Kampoff, et al.
- 
-        					<p>Ede, Kampoff, et al conducted a study delving into youth athletes’ perceptions in parental involvement of their athletic activity and their perception of how much it actually influences their performance. The main purpose of the study was to see what players were satisfied with and what they weren’t.  This intrinsically acknowledges that there is a real and perceived effect of parental involvement and behavior on personal sport performance, supporting the theory that it is an environmental factor that can have large implications on self-perception, motivation, enjoyment, and more when it comes to performance. Additionally, it was mentioned that researchers found “children’s perceptions of their parents involvement are predictive of the child’s sustained improvement in sport” showing the implications of athletes perception of their parents involvement (Ede et al. 6).</p>
+							<!--<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a> -->
+         					<p>Ede, Kampoff, et al conducted a study delving into youth athletes’ perceptions in parental involvement of their athletic activity and their perception of how much it actually influences their performance. The main purpose of the study was to see what players were satisfied with and what they weren’t.  This intrinsically acknowledges that there is a real and perceived effect of parental involvement and behavior on personal sport performance, supporting the theory that it is an environmental factor that can have large implications on self-perception, motivation, enjoyment, and more when it comes to performance. Additionally, it was mentioned that researchers found “children’s perceptions of their parents involvement are predictive of the child’s sustained improvement in sport” showing the implications of athletes perception of their parents involvement (Ede et al. 6).</p>
         					
         					<p>Participants of the study included young high school age athletes (13-15 year olds) that participated in club ice hockey. After an extensive questionnaire, the athletes reported positive perceived effects when their parents’ actions were supportive, understanding, and included praise. They were so positive, they in fact reported preferring more rather than less involvement if it was in this supportive nature. Some participants cited feelings of making their parents proud and feeling their support by their involvement (watching games, going to practices, enjoying the sport as well) as motivators to perform better. Parental understanding also had a positive effect on coping mechanisms and positive outlooks on setbacks.</p>
 
@@ -114,20 +110,22 @@
 			<!-- Three -->
 				<section id="three" class="wrapper style1">
 					<div class="container">
+						<!--
 						<header class="major special">
 							<h2>Mauris vulputate dolor</h2>
 							<p>Feugiat sed lorem ipsum magna</p>
 						</header>
-						<section id="main" class="wrapper">
+						<section id="main" class="wrapper"> 	-->
+
 						<div class="container">
 
 							<header class="major special">
-								<h2>Generic</h2>
-								<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+								<h2>Parental Involvement in Youth Soccer</h2>
+								<p>Holt et al</p>
 							</header>
 
-							<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-							<p>Parental Involvement in Youth Soccer Holt et al</p>
+							<!--<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>-->
+						
         					<p>Holt et al conducted a study on families involved in youth soccer to observe the different types of parental behavior and their effects on performance for young teenagers. The study included interviews of the family and audio recordings of soccer games. The researchers labeled parental action on a range from supportive to critical and also observed that parents had a perception that they knew more about the sport than the child, so this warranted specific feedback.</p>
         					<p>Holt et al observed encouragement as the most prevalent form of feedback, with comments like “good hustle” or “keep up the good work” in addition to loud cheering and obvious engagement. In response, there was a general improvement in children’s performance. Even when some of the encouraging comments included specific instructions for improvement (as was the case with one father), the athletes responded well to the specific encouragement and information as well.</p>
         					<p>Overall, they found that striking a balance between the instructional and the encouraging had the best effect on athletes. While being too instructional could have little immediate impact on performance, pointers here and there could help improve performance. While negative comment weren’t as prevalent, they did happen, which showed a noticeable negative impact on performance. Derogatory comments were occasionally observed, although they were mostly directed towards the other teams players. Much of the involvement and comments in general created an ‘emotionally intense’ environment, which impacted different athletes in different ways. This could be perceived as an external stimulus that serves as an attentional problem that can inhibit the concentration and focus necessary for high performance, as Baltzell, McCarthy, and Greenbaum discuss. One of the main things to take away from all of the observational data is that the relationships between parent and athlete that were more reciprocal and bi-directional (effective communication between the two parties) were the most effective since parents could act on how their child performs and is motivated best.</p>
@@ -141,11 +139,11 @@
 				<section id="four" class="wrapper style3 special">
 					<div class="container">
 						<header class="major">
-							<h2>Aenean elementum ligula</h2>
-							<p>Feugiat sed lorem ipsum magna</p>
+							<h2>More Resources</h2>
+							<p>Continue reading about this and find out do's and don't's about being a parent of a teenage athlete.</p>
 						</header>
 						<ul class="actions">
-							<li><a href="#" class="button special big">Get in touch</a></li>
+							<li><a href="generic.html" class="button special big">Resources</a></li>
 						</ul>
 					</div>
 				</section>
