Top Left Link, Generic Website

--- a/elements.html
+++ b/elements.html
@@ -25,7 +25,7 @@
 
 		<!-- Header -->
 			<header id="header" class="skels-layers-fixed">
-				<h1><strong><a href="index.html">Spatial</a></strong> by Templated</h1>
+				<h1><strong><a href="index.html">EDLF3440 Project</a></strong> by Group 2</h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Introduction</a></li>
