--- a/generic.html
+++ b/generic.html
@@ -25,7 +25,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><strong><a href="index.html">Spatial</a></strong> by Templated</h1>
+				<h1><strong><a href="index.html">EDLF3440 Project</a></strong> by Group 2</h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Introduction</a></li>
@@ -40,14 +40,10 @@
 				<div class="container">
 
 					<header class="major special">
-						<h2>Generic</h2>
-						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+						<h2>Parental Involvement in Children’s High School Athletics</h2>
+						<p>Michael P. Counter</p>
 					</header>
 
-					<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-
-					<p>Parental Involvement in Children’s High School Athletics</p>
-					<p>Michael P. Counter</p>
 					<p>Parental involvement in education and athletics are very important for the development of high-school students and high-school student-athletes in particular. According to a survey that was released from the National Federation of State High School Association there are nearly 7.8 million high school student athletes. Most of these student-athletes aspire to get recruited for a college team. The degree of parental involvement in children’s high school athletics, or the lack thereof, can have negative effects, particularly when support turns to pressure. Even though their intention may initially be supportive and encouraging, some parents of high school student athletes tend to rather encourage negative behavior and overpressure them. These parents are often referred to as helicopter parents. According to Foster W. Cline helicopter parents “are always hovering over their children, never allowing them to succeed or fail on their own (Cline and Fay 399).” Almost 60% of parents to young adults were helicopters parents in the early 2000s and this is thought to be on the rise according to Dr. Jesse Viner and Matt Zajechowski of Yellowbrick. The main reasons for high school student-athletes to leave competitive sports are burnouts (21%), lack of commitment (19%), and pressure/stress (13%) based on research, people interviewed, and the data from Wisconsin coaches and athletic directors. According to coaches the main reason helicopter parents to behave this way is that they are trying to live vicariously through their children experiences. There are more than 7 million high school athletes, but there are college roster spots for just two percent of them, and even less (only 1%) student-athletes get a “full ride” in the NCAA Division I level (Athletic Scholarship Statistics). </p>
 
 				</div>
