--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<h2>Parental Influence on High School Athletes’ Sport Performance</h2>
 				<p>Brian Aguirre, Muna Yusuf, Julie Roth, Nadine de Koning<br /> University of Virginia</p>
 				<ul class="actions">
-					<li><a href="#" class="button special big">Get Started</a></li>
+					<li><iframe width="560" height="315" src="https://www.youtube.com/embed/tIdzFBeG_6c" frameborder="0" allowfullscreen></iframe></li>
 				</ul>
 			</section>
 
